# timer

./: pyproject.toml
tests/: test_context_manager.py
timer/: __init__.py  timer.py
